--- a/voxnote/templates/voxnote/base.html
+++ b/voxnote/templates/voxnote/base.html
@@ -18,15 +18,14 @@
     <!-- Chargement des fichiers Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{% static 'voxnote/css/styles.css' %}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
     <!-- Chargement des fichiers jQuery et Font Awesome -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+   
     
     <!-- Police Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.google.com/icons">
+    
 </head>
 
 <body class="container-fluid">
@@ -79,7 +78,9 @@
     <br/>
     <br>
     <br>
+    <div class="container">
     {% block content %}
-    {% endblock content %} 
+    {% endblock content %}
+    </div>
 </body>
 </html>
