--- a/voxnote/templates/voxnote/accueil.html
+++ b/voxnote/templates/voxnote/accueil.html
@@ -14,19 +14,26 @@
         <!-- csrf_token est un jeton de sécurité CSRF pour empêcher les attaques CSRF -->
 
         <input type="file" name="audio_file" style="display: none;">
+
+        
         <!-- Input pour sélectionner un fichier audio, mais caché car nous allons enregistrer l'audio directement -->
 
-        <button type="submit" class="btn btn-primary">Envoyer</button>
-        <!-- Bouton de soumission du formulaire -->
     </form>
 
     <div id="generated-text" style="margin-top: 20px;">
-        <p>Texte généré :</p>
+        <p>Texte généré:</p>
+         {% if recognized_text %}
+         <textarea readonly>{{recognized_text }}</textarea>
+         {% else %}
+         <textarea readonly>Texte généré par l'IA</textarea>
+         {% endif %}
+        <!--<p>Texte généré :</p>
         {% if user_notes %}
         <textarea readonly>{{ user_notes.first.message }}</textarea>
         {% else %}
         <textarea readonly>Texte généré par l'IA</textarea>
         {% endif %}
+        -->
     </div>
 
     <!-- Paragraphe pour afficher le texte généré par reconnaissance vocale -->
