--- a/voxnote/templates/voxnote/base.html
+++ b/voxnote/templates/voxnote/base.html
@@ -55,10 +55,11 @@
                     <ul class="nav navbar-nav navbar-right">
                         <!-- Liens de navigation -->
                         <li><a href="{% url 'voxnote-accueil' %}">Accueil</a></li>
-                        
+                        <li><a href="{% url 'voxnote-notes' %}">Mes Notes</a></li>
+                        <li><a href="{% url  'voxnote-about' %}">À propos</a></li>
                         <!-- Si l'utilisateur est authentifié, affiche un lien de déconnexion, sinon affiche des liens de connexion et d'inscription -->
                         {% if user.is_authenticated %}
-                        <li><a href="{% url 'voxnote-notes' %}">Mes Notes</a></li>
+                        
                         <li>
                             
                             <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Déconnecter</a>
