--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,6 +1,7 @@
 {% extends "voxnote/base.html" %}
 {% block content %}
 
+
 <div class="content-section col-md-8 col-md-offset-2">
 
 <form method="POST" style="border: 1px solid black; margin: 4%; padding:10%; border-radius:1%;">
@@ -12,7 +13,7 @@
 	<button style="background: black; font-size: 2rem; padding:1%; color:white;" class="btn btn-outline-info" type="submit" ><span class="glyphicon glyphicon-log-in"></span>Connecter</button>
 
 <br/>
-<sub style="text-align: left;"><a href="{% url 'voxnote-register' %}" style="text-decoration: none; color: blue; padding:2%; cursor:pointer; margin-right:2%;">Créer un compte</a></sub>
+<sub style="text-align: center;"><a href="{% url 'voxnote-register' %}" style="text-decoration: none; color: blue; padding:2%; cursor:pointer; margin-right:2%;">Créer un compte</a></sub>
 </form>
 
 </div>
