--- a/voxnote/static/voxnote/css/styles.css
+++ b/voxnote/static/voxnote/css/styles.css
@@ -14,18 +14,123 @@
   text-align: center; /* Optional, to center text inside the div */
 }
 
-#mic {
-  background-color: #4CAF50;
-  color: white;
-  padding: 15px 30px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 10px;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 200%;
+  height: 150%;
+  text-align: center; /* Centrer le texte */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+   /* Espace entre les cartes */
+ 
 }
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.notes-collumn{
+  column-count: 3;
+  column-gap: 20px;
+}
+
+.mic-toggle {
+
+position: relative;
+display: block;
+width: 8rem;
+height: 8rem;
+border-radius: 50%;
+background-color: crimson;
+margin-bottom: 4rem;
+}
+
+.mic-toggle:after,
+.mic-toggle:before {
+  --pad: 0rem;
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: 0;
+  background-color: rgba(220, 20, 60,0.2);
+  top: var(--pad);
+  left: var(--pad);
+  right: var(--pad);
+  bottom: var(--pad);
+  border-radius: 50%;
+
+}
+
+.mic-toggle:after{
+  transition: 0.4s;
+
+}
+
+.mic-toggle:after{
+  transition: 0.4s;
+  
+}
+
+.mic-toggle:hover:before{
+  --pad: -1rem;
+}
+
+.mic-toggle:hover:after{
+  --pad:-2rem
+}
+
+.mic-toggle span{
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-size: 6rem;
+
+
+}
+
+.mic-toggle.is-recording:after{
+  animation: smoothPadAfter 0.6s ease-in alternate-reverse forwards infinite;
+}
+
+.mic-toggle.is-recording:before{
+  animation: smoothPadAfter 0.6s ease-in alternate-reverse forwards infinite;
+}
+@keyframes smoothPadAfter{
+  0%{
+    top: -2rem;
+    left: -2rem;
+    right: -2rem;
+    bottom: -2rem;
+  }
+
+  100%{
+    top: -1rem;
+    left: -1rem;
+    right: -1rem;
+    bottom: -1rem;
+  }
+}
+
+@keyframes smoothPadBefore{
+  0%{
+    top: -1rem;
+    left: -1rem;
+    right: -1rem;
+    bottom: -1rem;
+  }
+
+  100%{
+    top: -0.5rem;
+    left: -0.5rem;
+    right: -0.5rem;
+    bottom: -0.5rem;
+  }
+}
+
 
 #generated-text {
   margin-top: 20px;
