--- a/voxnote/templates/voxnote/about.html
+++ b/voxnote/templates/voxnote/about.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
-<h1>À propos du programme</h1>
+<div class="about-container">
+  <h1 class="about-heading">À propos du programme</h1>
+  <p class="about-description">L'IA a été conçue d'en bas en haut en utilisant les concepts du machine learning ...</p>
+</div>
 
 {% endblock content %}
