--- a/voxnote/templates/voxnote/note_detailView.html
+++ b/voxnote/templates/voxnote/note_detailView.html
@@ -1,12 +1,16 @@
 {% extends 'voxnote/base.html' %}
 {% block content%}
-<h1> Note </h1>
 
-<p>{{object.message}}</p>
+<div class="note-container">
+  <div class="note-content">
+    <p>{{object.date}}</p>
+    <p>{{object.message}}</p>
+  </div>
 
-<div>
-    <a class="btn btn-outline-danger" href="{% url 'voxnote-delete' object.id %}">Supprimer</a>
-
-    <a href="{% url 'voxnote-notes' %}"> Revenir aux notes</a>
+  <div class="btn-container">
+    <a class="btn btn-outline-danger btn-delete" href="{% url 'voxnote-delete' object.id %}">Supprimer</a>
+    <a class="btn btn-outline-primary btn-return" href="{% url 'voxnote-notes' %}">Revenir aux notes</a>
+  </div>
 </div>
-{% endblock content%}
+
+{% endblock content %}
