--- a/voxnote/static/voxnote/css/styles.css
+++ b/voxnote/static/voxnote/css/styles.css
@@ -13,30 +13,168 @@
   margin: 0 auto; /* Setting left and right margins to auto */
   text-align: center; /* Optional, to center text inside the div */
 }
+.note {
+  text-align: center;
+}
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 200%;
-  height: 150%;
-  text-align: center; /* Centrer le texte */
+.cards {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-   /* Espace entre les cartes */
- 
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+/* CSS pour chaque note */
+.card {
+  width: calc(33.33% - 20px);
+  margin-bottom: 20px;
+  background-color: #fff;
+  border-radius: 15px; /* Augmente la forme carrée */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px; /* Réduit l'espace interne */
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  text-align: center; /* Centre le texte à l'intérieur de la carte */
 }
 
-.notes-collumn{
-  column-count: 3;
-  column-gap: 20px;
+/* Styling du texte à l'intérieur de la carte */
+.card h5 {
+  margin-bottom: 10px;
+  font-family: Arial, sans-serif; /* Changer la police */
+  font-size: 18px; /* Taille de la police */
+  
 }
+
+.card p {
+  margin-bottom: 20px;
+  font-family: Arial, sans-serif; /* Changer la police */
+  font-size: 16px; /* Taille de la police */
+  
+}
+
+/* Styling du bouton "Voir la Note" */
+.card a {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.card a:hover {
+  background-color: #0056b3;
+}
+
+/* CSS pour rendre les notes moins larges sur les écrans larges */
+@media screen and (min-width: 1200px) {
+  .card {
+      width: calc(30% - 20px);
+  }
+}
+
+/* CSS pour rendre les notes moins larges sur les écrans moyens */
+@media screen and (max-width: 768px) {
+  .card {
+      width: calc(45% - 20px);
+  }
+}
+
+/* CSS pour rendre les notes moins larges sur les écrans étroits */
+@media screen and (max-width: 480px) {
+  .card {
+      width: calc(100% - 20px);
+  }
+}
+.note-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  height: 50%; /* La note occupe la moitié de la hauteur de l'écran */
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  text-align: center;
+  font-size: 1.5em; /* taille de police de la note */
+  overflow: auto;
+}
+
+.note-content {
+  margin-bottom: 20px;
+}
+
+.btn-container {
+  position: absolute;
+  top: 50%; /* Les boutons sont positionnés au milieu verticalement */
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 100%;
+  text-align: center;
+  margin-top: 20px; /* Espacement des boutons par rapport à la note */
+}
+
+.btn-delete {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  margin-right: 10px;
+}
+
+.btn-return {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  margin-left: 10px;
+}
+.delete-note-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.btn-delete-container { 
+  margin-top: 40px;
+}
+
+.btn-confirm {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  margin-right: 10px;
+}
+
+.btn-return {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.about-container {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.about-heading {
+  margin-bottom: 100px;
+}
+
+
+
+
+
 
 .mic-toggle {
 
