Modification du style du site et ajout d'une favIcon

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,7 +4,7 @@
 
 <div class="content-section col-md-8 col-md-offset-2">
 
-<form method="POST" style="border: 1px solid black; margin: 4%; padding:10%; border-radius:1%;">
+<form class="text-center" method="POST" style="border: 1px solid black; margin: 4%; padding:10%; border-radius:1%; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">
 	<h1 class="text-center" style="margin-bottom: 100px;">Connexion</h1>
 	{% csrf_token %}
 	<fieldset class="form-group">
