--- a/voxnote/templates/voxnote/base.html
+++ b/voxnote/templates/voxnote/base.html
@@ -15,7 +15,14 @@
     {% else %}
     <title>VoxNote</title>
     {% endif%}
+    <link rel="icon" type="image/jpg" href="{% static 'voxnote/img/icon.jpg' %}">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nexa:wght@400;700&display=swap">
+    <style>
+        body {
+            font-family: 'Nexa', sans-serif;
+        }
+    </style>
     <!-- Chargement des fichiers Bootstrap -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -38,9 +45,9 @@
         <!-- En-tête du document -->
 
         <!-- Barre de navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top" style="font-size: 20px; font-family: Arial, Helvetica, sans-serif;">
             <div class="container-fluid">
-                <div class="navbar-header">
+                <div class="navbar-header" >
                     <!-- Bouton de bascule pour la navigation mobile -->
                     <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
                         <span class="icon-bar"></span>
@@ -50,7 +57,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- Lien de la marque de la barre de navigation -->
-                    <a class="navbar-brand" class="styleheader" href="{% url 'voxnote-accueil' %}">Voxnote</a>
+                    <a class="navbar-brand" class="styleheader" style="font-size: 20px; font-family: Arial, Helvetica, sans-serif;" href="{% url 'voxnote-accueil' %}">Voxnote</a>
                 </div>
                 <!-- Contenu de la barre de navigation -->
                 <div class="collapse navbar-collapse" id="mainNavBar">
