--- a/voxnote/templates/voxnote/notes.html
+++ b/voxnote/templates/voxnote/notes.html
@@ -18,7 +18,7 @@
     {% endfor %}
 </div>
 {% else %}
-<p style="text-align: center;">Veuillez vous connecter pour enregistrer des notes</p>
+<p style="text-align: center; font-size: 30px; font-family: Arial, Helvetica, sans-serif;">Veuillez vous connecter pour enregistrer des notes</p>
 {% endif %}
 </div>
 {% endblock content%}
